--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,7 @@
   ],
   "window": {
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "Weixin",
+    "navigationBarTitleText": "今天吃什么 🍔🍕",
     "navigationBarBackgroundColor": "#ffffff"
   },
   "style": "v2",
